--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>SmittenKitten</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,900|Ubuntu" rel="stylesheet">
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">tindog</a>
+        <a class="navbar-brand" href="">smittenkitten*</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Togglenavigation">
           <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
   
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1>Meet new and interesting cats nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -79,19 +79,19 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 usp">
-          <i class="fas fa-check-circle usp-icon"></i>
+          <i class="fas fa-paw usp-icon"></i>
           <h3 class="usp-text">Easy to use.</h3>
-          <p style="color:#8f8f8f">So easy to use, even your dog could do it.</p>
+          <p style="color:#8f8f8f">So easy to use, even your <i>dog</i> could do it.</p>
         </div>
         <div class="col-lg-4 usp">
-          <i class="fas fa-bullseye usp-icon"></i>
+          <i class="fas fa-cat usp-icon"></i>
           <h3 class="usp-text">Elite Clientele</h3>
-          <p style="color:#8f8f8f">We have all the dogs, the greatest dogs.</p>
+          <p style="color:#8f8f8f">We have all the cats, the greatest cats.</p>
         </div>
         <div class="col-lg-4 usp">
-          <i class="fas fa-heart usp-icon"></i>
+          <i class="fas fa-paw usp-icon"></i>
           <h3 class="usp-text">Guaranteed to work.</h3>
-          <p style="color:#8f8f8f">Find the love of your dog's life or your money back.</p>
+          <p style="color:#8f8f8f">Find the love of your cat's life or your money back.</p>
         </div>
       </div>
     </div>
@@ -102,13 +102,13 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <h2>No more nightly yowling in the backyard for me. I've found the hottest Calico on SmittenKitten. Purrr.</h2>
+    <img src="images/mackerel-tabby-cat.jpg" alt="cat-profile">
+    <em>Pommetje, The Hague, NL</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <h2 class="testimonial-text">My cats used to be so lonely, but with SmittenKitten's help, they've found the loves of their life (no, the irony is not lost on me).</h2>
+    <img class="testimonial-image" src="images/crazy-cat-lady.jpg" alt="lady-profile">
+    <em>Beverly, Illinois</em>
 
   </section>
 
@@ -128,11 +128,11 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2>A Plan for Every Cat's Needs</h2>
+    <p>Simple and affordable price plans for your and your kittie.</p>
 
 
-    <h3>Chihuahua</h3>
+    <h3>Singapura</h3>
     <h2>Free</h2>
     <p>5 Matches Per Day</p>
     <p>10 Messages Per Day</p>
@@ -140,7 +140,7 @@
     <button type="button">Sign Up</button>
 
 
-    <h3>Labrador</h3>
+    <h3>Bombay Breed</h3>
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
@@ -148,9 +148,9 @@
     <button type="button">Sign Up</button>
 
 
-    <h3>Mastiff</h3>
+    <h3>Maine Coon</h3>
     <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
+    <p>Priority Listing</p>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
@@ -163,7 +163,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3>Find the True Love of Your Cat's Life Today.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
@@ -174,7 +174,8 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2018 smittenkitten</p>
+    <p>*) The name SmittenKitten is stolen from its owner, Laura Hamm. We ask for forgiveness, not for permission. Meow.</p>
 
   </footer>
 
