Prettying up - end of college 75

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SmittenKitten</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,900|Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,800|Ubuntu" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -25,7 +25,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -100,10 +100,10 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
 
     <h2>No more nightly yowling in the backyard for me. I've found the hottest Calico on SmittenKitten. Purrr.</h2>
-    <img src="images/mackerel-tabby-cat.jpg" alt="cat-profile">
+    <img class="testimonial-image" src="images/mackerel-tabby-cat.jpg" alt="cat-profile">
     <em>Pommetje, The Hague, NL</em>
 
     <h2 class="testimonial-text">My cats used to be so lonely, but with SmittenKitten's help, they've found the loves of their life (no, the irony is not lost on me).</h2>
@@ -115,11 +115,11 @@
 
   <!-- Press -->
 
-  <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+  <section id="press" class="colored-section">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -161,7 +161,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="colored-section">
 
     <h3>Find the True Love of Your Cat's Life Today.</h3>
     <button type="button">Download</button>
