I reclaimed my name or something.

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Togglenavigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-  
+
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-  
+
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="">
@@ -56,9 +56,9 @@
           </ul>
         </div>
       </nav>
-  
+
       <!-- Title -->
-  
+
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting cats nearby.</h1>
@@ -175,7 +175,7 @@
   <footer id="footer">
 
     <p>© Copyright 2018 smittenkitten</p>
-    <p>*) The name SmittenKitten is stolen from its owner, Laura Hamm. We ask for forgiveness, not for permission. Meow.</p>
+    <p>*) My name is Laura Hamm and I thought of this name.</p>
 
   </footer>
 
